gen: update generated code
