# backend/internal/pkg/db/model/photo_groups.gen.go
@@ -1,0 +1,27 @@
+// Code generated by gorm.io/gen. DO NOT EDIT.
+// Code generated by gorm.io/gen. DO NOT EDIT.
+// Code generated by gorm.io/gen. DO NOT EDIT.
+
+package model
+
+import (
+	"time"
+)
+
+const TableNamePhotoGroup = "photo_groups"
+
+// PhotoGroup mapped from table <photo_groups>
+type PhotoGroup struct {
+	ID           string    `gorm:"column:id;primaryKey" json:"id"`
+	CoverPhotoID string    `gorm:"column:cover_photo_id;type:TEXT" json:"cover_photo_id"`
+	PhotoCount   int32     `gorm:"column:photo_count;type:INTEGER" json:"photo_count"`
+	TimeStart    time.Time `gorm:"column:time_start" json:"time_start"`
+	TimeEnd      time.Time `gorm:"column:time_end" json:"time_end"`
+	HashMax      int32     `gorm:"column:hash_max;not null" json:"hash_max"`
+	CreatedAt    time.Time `gorm:"column:created_at;type:DATETIME" json:"created_at"`
+}
+
+// TableName PhotoGroup's table name
+func (*PhotoGroup) TableName() string {
+	return TableNamePhotoGroup
+}
